---
source: tests/parse.rs
description: "+ 4;\n4 + (* nil) - 5;\n\n"
expression: render_dcx()
---
error: unexpected `+` token in input
  --> err_binop_chains.lx@missing_rhs:1:1
  |
1 | + 4;
  | ^ unexpected token here
  |
  = note: expected expression

error: unexpected `*` token in input
  --> err_binop_chains.lx@missing_rhs:2:6
  |
2 | 4 + (* nil) - 5;
  |      ^ unexpected token here
  |
  = note: expected expression
